// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadedView collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
    >
      <CourseList />
    </Col>
    <Col
      className="sidebar-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
<<<<<<< HEAD
=======
    >
      <CourseList />
    </Col>
    <Col
      className="p-0"
      lg={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      md={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      sm={
        Object {
          "offset": 2,
          "span": 8,
        }
      }
>>>>>>> d27abdd... feat: VAN-1123 - Add recommendations panel on home page
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
<<<<<<< HEAD
=======
      xs={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
>>>>>>> d27abdd... feat: VAN-1123 - Add recommendations panel on home page
    >
      <WidgetSidebar />
    </Col>
  </Row>
</Container>
`;

exports[`LoadedView not collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
    >
      <CourseList />
    </Col>
    <Col
      className="sidebar-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
<<<<<<< HEAD
=======
    >
      <CourseList />
    </Col>
    <Col
      className="p-0 pl-1 pr-3"
      lg={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      md={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      sm={
        Object {
          "offset": 2,
          "span": 8,
        }
      }
>>>>>>> d27abdd... feat: VAN-1123 - Add recommendations panel on home page
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
<<<<<<< HEAD
=======
      xs={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
>>>>>>> d27abdd... feat: VAN-1123 - Add recommendations panel on home page
    >
      <h2
        className="course-list-title"
      >
         
      </h2>
      <WidgetSidebar />
    </Col>
  </Row>
</Container>
`;
